--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "bootstrap": "^5.3.5",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
